# carbon-footprint-reporting

./: .gitignore  README.md  pyproject.toml  report_carbon.py
data/: carbon_survey_results.csv  detailed_analysis.csv  detailed_analysis.json  detailed_analysis_clean.csv  detailed_report.md
docs/: CAMERA_READY.md  HOW_TO_RUN_SURVEY.md
paper/: carbon_position_paper.bib  carbon_position_paper.tex  energy_reporting_data.json  generate_figures.py  generate_reporting_gap.py  lay_summary.md  scrape_energy_reporting.py
src/: detailed_analysis.py  generate_report.py  retry_failed.py  survey_carbon_reporting.py
