[project]
name = "carbon-footprint-reporting"
version = "0.1.0"
description = "[ICML 2026] Position: Carbon Footprint Reporting Should Be Routine in Machine Learning Research"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Guan-Ming Chiu", email = "gmchiu@arbor.ntu.edu.tw" }]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openreview-py>=1.41",
    "pandas>=2.0",
    "PyPDF2>=3.0",
    "requests>=2.31",
]
